--- a/bonsai-gui/index.html
+++ b/bonsai-gui/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Bonsai Chess</title>
+    
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link data-trunk rel="tailwind-css" href="input.css" />
+    <link data-trunk rel="rust" data-wasm-opt="z" />
   </head>
   <body>
   </body>
