--- a/bonsai-gui/index.html
+++ b/bonsai-gui/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Bonsai Chess</title>
-    <link data-trunk rel="icon" type="image/x-icon" href="../static/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     
     <link data-trunk rel="copy-dir" href="../static" />
     <link data-trunk rel="tailwind-css" href="/input.css" />
